--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "url": "https://github.com/suvankar-git/HELLO_WORLD.git"
   },
   "scripts": {
-    "start": "nodemon index"
+    "start": "node index"
   },
   "author": "Suvankar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "nodemon": "^1.18.6"
-  }
+    "express": "^4.16.4"  }
 }
